# twitch-discord-relay

./: .gitignore  Cargo.toml
src/: main.rs
src/connectors/: connector_message.rs  discord.rs  irc_parser.rs  mod.rs  twitch.rs
