[package]
name = "twitch-discord-relay"
version = "0.1.0"
authors = ["Christian Kramp <ckramp699@gmail.com>"]
edition = "2018"

[dependencies]
serenity = { default-features = false, features = ["client", "gateway", "model", 
          "rustls_backend"], version = "0.10.4"}
tokio = { version = "1.2", features = ["macros", "rt-multi-thread", "sync"] }
regex = "1.4.3"
